# redisTOON

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  redistoon.py  requirements.txt  setup.py
docker/: redis.conf
examples/: basic_usage.py
src/: redistoon.c  redistoon.h  toon_decoder.c  toon_encoder.c  toon_json.c  toon_memory.c  toon_operations.c  toon_path.c
tests/: test_redistoon.py
